--- a/public/create.html
+++ b/public/create.html
@@ -4,53 +4,106 @@
 		<link rel="stylesheet" href="../css/bootstrap.min.css">
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
+		<script src="../js/floatlabels.min.js"></script>
 
-		<!-- <script src="../js/controllers.js"></script> -->
+		<style>
+			#question, .choice {
+				height: 60px;
+				border: 3px solid #78C0A8;
+				border-radius: 30px;
+			}
+
+			#question {
+				padding-left: 20px;
+			}
+
+			#poll-submit {
+				color: #F0A830;
+				background-color: white;
+				border-radius: 30px;
+				border: 3px solid #F0A830;
+			}
+
+			#add-choice-btn, #clear-choice-btn {
+				height: 60px;
+				width: 75px;
+				background-color: #78C0A8;
+				border: 3px solid #78C0A8;
+			}
+
+			#add-choice-btn {
+				border-top-left-radius: 30px;
+				border-bottom-left-radius: 30px;
+			}
+
+			#clear-choice-btn {
+				border-top-right-radius: 30px;
+				border-bottom-right-radius: 30px;
+			}
+
+			span.glyphicon {
+				font-size: 3em;
+				position: relative;
+				top: -3;
+				left: 4;
+			}
+
+			label.label-floatlabel {
+				padding-left: 10px;
+			}
+		</style>
 	</head>
 	<body ng-controller="PollCreateCtrl">
-      <h1>Poll Builder</h1>
+		<div class="container">
+			<div class="row">
+				<h1>Poll Builder</h1>
+				<input id="question" type="text" class="form-control floatlabel" placeholder="Add a question" ng-model="question" required>
+			</div>
+		      <table class="table table-striped" ng-show="choices.length > 0">
+		        <thead>
+		          <tr>
+		            <th>Options</th>
+		            <th>Choice</th>
+		          </tr>
+		        </thead>
+		        <tbody>
+		          <tr ng-repeat="choice in choices">
+		            <td>
+		              <button class="btn btn-danger btn-xs" ng-click="removeChoice($index)">Remove</button>
+		            </td>
+		            <td>{{ choice }}</td>
+		          </tr>
+		        </tbody>
+		      </table>
 
-      <table class="table table-striped" ng-show="choices.length > 0">
-        <thead>
-          <tr>
-            <th>Value</th>
-            <th>Options</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="choice in choices">
-            <td>{{ choice }}</td>
-            <td>
-              <button class="btn btn-danger btn-xs" ng-click="removeChoice($index)">Remove</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+		      <p ng-hide="choices.length > 0">Add choices to your poll to continue.</p>
 
-      <p ng-hide="choices.length > 0">Add choices to your poll to continue.</p>
 
-	<h2>Add Question</h2>
-		<div class="form-group">
-			<input type="text" class="form-control" ng-model="question" required>
-		</div>
-
-      <h2>Add Contact</h2>
-      <form role="form" ng-submit="addChoice()">
-        <div class="form-group">
-          <label for="text">Name</label>
-          <input type="text" class="form-control" id="text" placeholder="Enter name" ng-model="choiceNew" required>
-        </div>
-        <button type="button" class="btn btn-default" ng-click="choiceNew = ''">Clear</button> 
-        <button type="submit" class="btn btn-success">Add Contact</button>
-      </form>
-      <div class="container">
-      	<div class="col-lg-4 col-lg-offset-4">
-      		<button ng-click="submitPoll()">Save</button>
-      	</div>
+		      <h2>Add Choice</h2>
+		      <form role="form" ng-submit="addChoice()">
+		        <div class="input-group">
+		        	<span class="input-group-btn">
+		        		<button id="add-choice-btn" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
+		        	</span>
+		          <input type="text" class="form-control choice" id="text" placeholder="Add a response" ng-model="choiceNew" required>
+		          <span class="input-group-btn">
+		        	<button id="clear-choice-btn" type="button" class="btn btn-default" ng-click="choiceNew = ''">Clear</button>
+		          </span>
+		        </div>
+		      </form>
+		      <div class="row">
+		      	<div class="col-lg-4 col-lg-offset-4">
+		      		<button id="poll-submit" class="btn-block btn-lg" ng-click="submitPoll()">Submit Poll</button>
+		      	</div>
+		      </div>
       </div>
 	</body>
 	<script>
 	(function() {
+		$( 'input.floatlabel' ).floatlabel({
+			slideInput: false,
+			labelEndTop: '10px'
+		});
 
 		var app = angular.module('pollCreateApp', []);
 
@@ -88,22 +141,6 @@
 				$scope.choices.push($scope.choiceNew);
 				$scope.choiceNew = '';
 				console.log($scope.choices);
-			};
-
-			$scope.editChoice = function(index)
-			{
-
-				$( ".edit-choice:eq(" + index + ")" ).replaceWith("<input type='text'></input>");
-				$scope.choiceEdit.id = index;
-				$scope.choiceEdit.value = $scope.choices[index].value;
-
-				// $('#myModal').show('modal');
-			};
-
-			$scope.saveEditedChoice = function() {
-				$scope.choices[$scope.contactEdit.id] = $scope.choiceEdit;
-
-				// hide modal
 			};
 
 			$scope.submitPoll = function() {
