--- a/public/results.html
+++ b/public/results.html
@@ -12,140 +12,48 @@
 		<div id="pollContainer" class="container">
 			<canvas id="pollResults" width="400" height="400"></canvas>
 		</div>
+
+		<div>
+			<ul class="pages">
+    			<li class="chat page">
+      				<div class="chatArea">
+        				<ul class="messages"></ul>
+      				</div>
+      				<input class="inputMessage" placeholder="Type here..."/>
+    			</li>
+    			<li class="login page">
+      				<div class="form">
+        				<h3 class="title">What's your nickname?</h3>
+        					<input class="usernameInput" type="text" maxlength="14" />
+      				</div>
+    			</li>
+  			</ul>
+		</div>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="/js/Chart.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
+		<script src="/js/client.js"></script>
 		<script>
-
-			var code = window.location.pathname.toString().split('/')[2];
-			var socket = io(); //namespace
-
-			socket.emit('subscribe', code);
-			var pollResults;
-			var poll = null;
-			var ctx = null;
-			var initialLoad = true;
-			var chartData = [];
-			var chartColors = ["#F7464A", "#ACBEA3", "#157A6E", "#499F68", "#68A357", "#FF33CC", "#444545", "#666699", "#32213A", "#40090D", "#E3D26F"];
-			var ctx = $("#pollResults").get(0).getContext("2d");
-
-  			var chartOptions = {
-					    //Boolean - Whether we should show a stroke on each segment
-					    segmentShowStroke : true,
-
-					    //String - The colour of each segment stroke
-					    segmentStrokeColor : "#fff",
-
-					    //Number - The width of each segment stroke
-					    segmentStrokeWidth : 2,
-
-					    //Number - The percentage of the chart that we cut out of the middle
-					    percentageInnerCutout : 0, // This is 0 for Pie charts
-
-					    //Number - Amount of animation steps
-					    animationSteps : 100,
-
-					    //String - Animation easing effect
-					    animationEasing : "easeInOutSine",
-
-					    //Boolean - Whether we animate the rotation of the Doughnut
-					    animateRotate : true,
-
-					    //Boolean - Whether we animate scaling the Doughnut from the centre
-					    animateScale : false,
-
-					    //String - A legend template
-					    legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
-
-					};
-
-			var spawnChart = function(code)
+			var $window = $( window );
+			var $inputMessage = $( '.inputMessage' );
+			var sendMessage = function()
 			{
-				var jsonResultsUrl = "/polls/" + code + "/json-results";
+				var message = $inputMessage.val();
+				socket.emit('new message', message, code);
+			};
 
-				$.get(jsonResultsUrl, function(data)
-				{
-					chartData = formatJsonData(data);
-
-					if( initialLoad )
-					{
-						pollResults = new Chart(ctx).Pie(chartData, chartOptions);
-					} else {
-						console.log('not inital load');
-						updateChartData(chartData);
-					}
-
-					$( '#pollTitle' ).text(data.question);
-				});
-			}
-
-			var updateChartData = function(data)
+			$window.keydown(function(e)
 			{
-				console.log(pollResults.segments.length);
-				for(var j = 0; j < data.length; j++)
+				if(e.which === 13)
 				{
-					console.log(data[j].label);
-					for(var i = 0; i < pollResults.segments.length; i++)
-					{
-						console.log(pollResults.segments[i].label);
-						if(data[j].label === pollResults.segments[i].label)
-						{
-							pollResults.segments[i].value = data[j].value;
-							console.log("these match " + pollResults.segments[i].label + ' ' + data[j].label )
-							break;
-						} else if( i === pollResults.segments.length - 1) {
-							console.log('no matches on ' + data[j].label);
-							pollResults.addData(data[j]);
-						}
-					}
+					sendMessage();
 				}
-
-				console.log(pollResults);
-
-				pollResults.update();
-			}
-
-			var formatJsonData = function(poll)
-			{
-				var pollData = [];
-				var colorLength = chartColors.length;
-
-				poll.responses.forEach(function(element, index)
-				{
-
-					var i = null;
-					if(index > colorLength) {
-						i = index - colorLength % colorLength;
-					} else {
-						i = index;
-					}
-
-					pollData.push({
-						value: element.count,
-						color: chartColors[i],
-						label: element.choice
-
-					});
-				});
-
-				return pollData;
-			 };
-
-			socket.on('poll submission', function(code)
-			{
-				initialLoad = false;
-				console.log('poll submission');
-				spawnChart(code);
 			});
 
-			$( document ).ready(function()
+			socket.on('new message', function(msg)
 			{
-				spawnChart(code); // code pulled from url
-			});
-
-
-
-
+				console.log(msg);
+			})
 		</script>
 	</body>
 </html>
