--- a/public/results.html
+++ b/public/results.html
@@ -204,7 +204,7 @@
 				{
 					$inputMessage.val('');
 					addChatMessage({
-						username: username + " ",
+						username: username,
 						message: message
 					});
 				}
@@ -229,7 +229,7 @@
 				}
 
 				var $usernameDiv = $('<span class="username"/>')
-					.text(data.username + " ")
+					.text(data.username)
 					.css('color', getUsernameColor(data.username));
 
 				var $messageBodyDiv = $('<span class="messageBody">')
