--- a/public/results.html
+++ b/public/results.html
@@ -54,8 +54,9 @@
 	}
 
 	.pie-box{
-		background-color: #4fc143;
-		color: #fff;
+		background-color: rgba(79, 193, 67, 0.1);
+		color: #000;
+		border: 10px solid #4fc143;
 	}
 	.poll-choices{
 		background-color: #124859;
@@ -77,6 +78,9 @@
      .form{
      	display: inline-block;
      	list-style-type: none;
+     	font-family:  'globerThin', sans-serif;
+     	color: white;
+     	font-size: 25px;
      }
 
      .scrollable {
@@ -96,6 +100,12 @@
      	resize: none;
      	font-family: 'globerThin', sans-serif;
      	font-size: 20px;
+     }
+
+     .usernameInput {
+     	width: 100%;
+     	height: 40px;
+     	color: black;
      }
 
      #poll-results {
