--- a/public/create.html
+++ b/public/create.html
@@ -8,11 +8,12 @@
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 		<script src="../js/floatlabels.min.js"></script>
-
+		<script src='https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit async defer'></script>
+		<script src="/js/angular-recaptcha.js"></script>
 		<style>
 			#question, .choice {
 				height: 60px;
-				border: 3px solid #78C0A8;
+				border: 3px solid rgb(30, 159, 180);
 				border-radius: 5px;
 			}
 			body {
@@ -38,8 +39,8 @@
 			#add-choice-btn, #clear-choice-btn {
 				height: 60px;
 				width: 75px;
-				background-color: #78C0A8;
-				border: 3px solid #78C0A8;
+				background-color: rgb(30, 159, 180);
+				border: 3px solid rgb(30, 159, 180);
 			}
 
 			#add-choice-btn {
@@ -58,15 +59,9 @@
 			}
 
 			.glyphicon-left {
-				color: #FCEBB6;
+				color: white;
 				top: 0;
 				/*left: 5;*/
-			}
-
-			.glyphicon-right {
-				color: #F07818;
-				top: 0;
-				/*left: -5;*/
 			}
 
 			label.label-floatlabel {
@@ -76,13 +71,35 @@
 			.choice-options {
 				width: 50px;
 			}
+
+			.container {
+				border: 1px #D3D3D3 solid;
+				/*border-radius: 15px;*/
+				margin-top: 60px;
+				background-color: white;
+			}
+
+			body {
+				background-color: #2C303F
+			}
+
+			#contact-recaptcha {
+				margin-top: 15px;
+			}
+
+			#contact-recaptcha body {
+				font-family: 'Raleway';
+			}
+
 		</style>
 	</head>
 	<body ng-controller="PollCreateCtrl">
 		<div class="container">
 			<div class="row">
-				<h1>Poll Builder</h1>
-				<input id="question" type="text" class="form-control floatlabel" placeholder="Add a question" ng-model="question" required>
+				<div class="col-md-12">
+					<h1>Poll Builder</h1>
+					<input id="question" type="text" class="form-control" placeholder="Add a question" ng-model="question" required>
+				</div>
 			</div>
 
 
@@ -90,13 +107,11 @@
 		      <form role="form" ng-submit="addChoice()">
 		        <div class="input-group">
 		        	<span class="input-group-btn">
-		        		<button id="add-choice-btn" class="btn btn-success"><span class="glyphicon glyphicon-plus glyphicon-left"></span></button>
+		        		<button id="add-choice-btn" class="btn btn-success"><span class="glyphicon glyphicon-list glyphicon-left"></span></button>
 		        	</span>
 		          <input type="text" class="form-control choice" id="text" placeholder="Add a response" ng-model="choiceNew" required>
-		          <span class="input-group-btn">
-		        	<button id="clear-choice-btn" type="button" class="btn btn-default" ng-click="choiceNew = ''"><i class="fa fa-eraser"></i></button>
-		          </span>
 		        </div>
+		         <div id="contact-recaptcha" class="g-recaptcha" data-sitekey="6LfMyQkTAAAAAAn4sMfHHYRHiFgARWdlMEmRLDcG"></div>
 		      </form>
 		      <div class="row">
 		      	<div class="col-lg-4 col-lg-offset-4">
@@ -131,7 +146,7 @@
 			labelEndTop: '7px'
 		});
 
-		var app = angular.module('pollCreateApp', []);
+		var app = angular.module('pollCreateApp', ['vcRecaptcha']);
 
 		app.factory('pollService', function($http) {
 			return {
@@ -145,6 +160,7 @@
 
 			$scope.choices = [];
 
+			$scope.recaptchaResponse = null;
 			$scope.choiceNew = "";
 			$scope.choiceEdit = "";
 
@@ -176,18 +192,24 @@
 
 			$scope.submitPoll = function() {
 
+				$scope.recaptchaResponse = $( '#g-recaptcha-response' ).val();
+				console.log($scope.recaptchaResponse);
+
 				$scope.poll = {
 					question: $scope.question,
-					choices: $scope.choices
+					choices: $scope.choices,
+					recaptchaResponse: $scope.recaptchaResponse
 				};
 
-				pollService.savePoll($scope.poll, function(data) {
+				pollService.savePoll($scope.poll, function(data, status) {
 					console.log(data);
-					console.log('this is a test');
-					var redirectUrl = data.code + '?token=' + data.token;
-
-					console.log(redirectUrl);
+					if(status === 200)
+					{
+						var redirectUrl = data.code + '?token=' + data.token;
 						window.location = redirectUrl;
+					} else if(status === 403) {
+						// some dom element flash message about failure
+					}
 				});
 			};
 
