--- a/public/results.html
+++ b/public/results.html
@@ -5,33 +5,53 @@
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
+		<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
+		<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
+
 		<link rel="icon" href="../public/favicon.ico">
 	</head>
 	<style type="text/css">
-	@font-face { font-family: globerSemiBold; src: url('/fonts/Glober SemiBold Free.otf'); } 
-	@font-face { font-family: globerThin; src: url('/fonts/Glober Thin Free.otf'); } 
+	@font-face { font-family: globerSemiBold; src: url('/fonts/Glober SemiBold Free.otf'); }
+	@font-face { font-family: globerThin; src: url('/fonts/Glober Thin Free.otf'); }
 
 	body,html{
-		background-color: #fff;
+		background-color: #212635;
+		width: 100%;
+		height: 100%;
 	}
 	h1{
-		font-family: 'globerThin', sans-serif;
-		font-size: 60px;
+		font-family: 'globerSemiBold', sans-serif;
+		font-size: 65px;
 		line-height: 0.9;
+		text-align: center;
+		margin-top: 110px;
+		margin-bottom: 10px;
+		padding-top: 20px;
+		color: #fff;
+	}
+	h2{
+		font-family: 'globerThin', sans-serif;
+		font-size: 55px;
+		text-align: center;
+		color: #E9BC1B;
+		margin-top: 0px;
+		margin-bottom: 0px;
+		padding-top: 20px;
 	}
 	p{
 		font-family: 'globerThin', sans-serif;
 		font-size: 35px;
 		padding-top: 75px;
 	}
-	.col-md-6{
-		background-color: #00a3d9;
+	.row{
+		margin-right: 0px;
+		margin-left: 0px;
 	}
 	.col-md-12{
 		padding-top: 20px;
 	}
 	.col-md-6,.col-md-12{
-		/*border: 1px solid #000;*/
 		padding-bottom: 20px;
 	}
 
@@ -42,357 +62,167 @@
 
 	.circle{
 		border-radius: 50%;
-		width: 200px;
-		height: 200px;
-		border: 1px solid #000;
-		background-color: #fff;
+		width: 225px;
+		height: 225px;
+		border: 1px solid #fff;
+		background-color: #c76256;
+	}
+	.container{
+		padding-top: 10px;
+		padding-bottom: 10px;
 	}
 	canvas{
 		padding-bottom: 10px;
 	}
 
 	.pie-box{
-		background-color: #4fc143;
-		color: #fff;
+		background-color: #212635;
+		color: #e7e5dc;
+/*		min-height: 515px;
+		height: 564px;*/
+
 	}
 	.poll-choices{
-		background-color: #124859;
+		background-color: #F5EACD;
+		min-height: 515px;
 	}
-	.chatArea{
-		background-color: #00a3d9;
+	div.chatArea{
+		background-color: #78c0a8;
+		margin-bottom: 25px;
+		overflow: scroll;
+		max-height: 165px;
 	}
-	 #messages { 
-	 	font-family: 'globerThin', sans-serif;
-	 	list-style-type: none; margin: 0; padding: 0; 
-
+	 #messages {
+	 	font-family: 'globerSemiBold', sans-serif;
+	 	list-style-type: none; margin: 0; padding: 0;
 	 }
-     #messages li { padding: 5px 10px; }
+     #messages li {
+      	padding: 5px 10px;
+      	font-size: 15px;
+      }
      #messages li:nth-child(odd) { background: #eee; }
      #chat-section{
-     	background-color: #00a3d9;
+     	background-color: #78c0a8;
      }
      .form{
      	display: inline-block;
      }
+     li.chat.page{
+     	overflow: scroll;
+		max-height: 165px;
+     }
+
+     ul#messages{
+     	overflow: scroll;
+			max-height: 165px;
+			width: 100%;
+     }
+
+     div#chat-section{
+     	height: 165px;
+     	max-height: 165px;
+     	overflow: scroll;
+     	position: relative;
+     	width: 100%;
+
+     }
+     button{
+     	font-family: 'globerThin', sans-serif;
+     	font-size: 35px;
+     	color: #E9BC1B;
+     }
+/*     div.container{
+     	max-width: 600px;
+     }*/
+     div.col-md-6.poll-choices{
+     	min-height: 505px;
+     	max-height: 564px;
+     	overflow: scroll;
+     	padding-bottom: 10px;
+     }
+     ul#pages{
+     	padding-left: 0px;
+     	margin-bottom: 0px;
+     	/*width: 100%;*/
+     }
+     .inputMessage{
+			bottom: 0;
+	    position: absolute;
+	    width: 100%;
+
+     }
+     .usernameInput{
+     	bottom: 0;
+     	position: absolute;
+     	width: 100%;
+     }
+
+     li > span{
+     	display: inline-block;
+     	margin-right: 10px;
+     	width: 25px;
+     	height: 25px;
+     	border-radius: 5px;
+
+     }
+		 .pie-legend{
+			 display:block;
+			 width: 100%;
+			 list-style: none;
+			 color: #E9BC1B;
+			 background-color: #1e9fb4;
+			 padding-top: 20px;
+			 padding-bottom: 38px;
+			 font-size: 30px;
+			 margin-bottom: 0px;
+			 font-family: 'globerThin', sans-serif;
+		 }
+		 @media (max-width: 991px) {
+			 #pollTitle{
+				 font-size: 55px;
+			 }
+		}
 
 	</style>
-	<body>
-<div class="row">
+<body>
+	<!--===================== NAVIGATION =====================-->
+	    <header class="header-area">
+	    	<div class="container clearfix">
 
-		<div class="col-md-6 pie-box">
+	        	<div class="logo-area">
+	                <a href="#" class="logo">Poll Genius</a>
+	                <a class="toggle-btn"><i class="fa fa-bars"></i></a>
+	            </div>
+	            <nav class="nav-main">
+	            	<ul class="menu-cont">
+	                	<li class="active"><a href="/">Home</a></li>
+	                    <li><a href="/test">Polls</a></li>
+	                    <li><a href="/polls/create">Create Poll</a></li>
+	                </ul>
+	            </nav>
+
+	        </div>
+	    </header>
+	<!-- =========================================================-->
+
+		<div class="pie-box">
 			<h1 id="pollTitle"></h1>
-			<div id="pollContainer" class="container">
-			<div class="col-md-1"></div>
-				<div class="col-md-3">
-					<canvas id="pollResults" width="250" height="240"></canvas>
-				</div>
-			</div>
+				<div class="col-md-4"></div>
+					<div id="pollContainer">
+							<canvas id="pollResults" width="390" height="390"></canvas>
+					</div>
 		</div>
 
-	<section id="chat-section">
-		<ul id="pages">
-			<li class="chat page">
-					<div class="chatArea">
-						<ul id="messages"></ul>
-					</div>
-					<input class="inputMessage" placeholder="Type here..."/>
-			</li>
-			<li class="login page">
-					<div class="form">
-					<h3 class="title">What's your nickname?</h3>
-						<input class="usernameInput" type="text" maxlength="14" />
-					</div>
-			</li>
-		</ul>
-	</section>
-
-</div>
-
-	<section class="poll-choices">
-		<div class="container">
-			<div class="col-md-12">
-				<div class="container">
-					<div class="row">
-							<div class="col-md-3">
-									<div class="circle">
-										<p align="center">yes</p>
-									</div>
-							</div>
-
-							<div class="col-md-3">
-								<div class="circle">
-									<p align="center">yes</p>
-								</div>
-							</div>
-
-							<div class="col-md-3">
-								<div class="circle">
-									<p align="center">yes</p>
-								</div>
-							</div>
-
-							<div class="col-md-3">
-								<div class="circle">
-									<p align="center">yes</p>
-								</div>
-							</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="/js/Chart.min.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="/js/client.js"></script>
-		<script>
-  			var FADE_TIME = 150; // ms
-  			var TYPING_TIMER_LENGTH = 400; // ms
-  			var COLORS = [
-    			'#e21400', '#91580f', '#f8a700', '#f78b00',
-    			'#58dc00', '#287b00', '#a8f07a', '#4ae8c4',
-    			'#3b88eb', '#3824aa', '#a700ff', '#d300e7'
-  			];
-			var $window = $( window );
-			var $usernameInput = $( '.usernameInput' );
-			var $messages = $( '#messages' );
-			var $inputMessage = $( '.inputMessage' );
-
-
-			var $loginPage = $('.login.page'); // The login page
-  			var $chatPage = $('.chat.page'); // The chatroom page
-
-			var username;
-			var connected = false;
-			var typing = false;
-			var lastTypingTime;
-			var $currentInput = $usernameInput.focus();
-
-			var addParticipantsMessage = function(data)
-			{
-				var message = '';
-				if(data.numUsers == 1) {
-					message += "there's 1 participant";
-				} else {
-					message += "there are " + data.numUsers + " participants";
-				}
-
-				log(message);
-			}
-
-			var setUsername = function()
-			{
-				username = cleanInput($usernameInput.val().trim());
-
-				if(username) {
-					$loginPage.fadeOut();
-					$chatPage.show();
-					$loginPage.off('click');
-					$currentInput = $inputMessage.focus();
-
-					socket.emit('add user', username, code);
-				}
-			}
-
-			var sendMessage = function()
-			{
-				var message = cleanInput($inputMessage.val());
-				
-				if(message && connected)
-				{
-					$inputMessage.val('');
-					addChatMessage({
-						username: username,
-						message: message
-					});
-				}
-				socket.emit('new message', message, code);
-			};
-
-
-			var log = function(message, options)
-			{
-				var $el = $('<li>').addClass('log').text(message);
-				addMessageElement($el, options);
-			}
-
-			var addChatMessage = function(data, options)
-			{
-				var $typingMessages = getTypingMessages(data);
-				options = options || {};
-				if($typingMessages.length !== 0)
-				{
-					options.fade = false;
-					$typingMessages.remove();
-				}
-
-				var $usernameDiv = $('<span class="username"/>')
-					.text(data.username)
-					.css('color', getUsernameColor(data.username));
-
-				var $messageBodyDiv = $('<span class="messageBody">')
-					.text(data.message);
-
-				var typingClass = data.typing ? 'typing' : '';
-			    var $messageDiv = $('<li class="message"/>')
-			      .data('username', data.username)
-			      .addClass(typingClass)
-			      .append($usernameDiv, $messageBodyDiv);
-
-			    addMessageElement($messageDiv, options);
-			};
-
-			var addChatTyping = function(data)
-			{
-				getTypingMessages(data).fadeOut(function()
-				{
-					$(this).remove();
-				});
-			};
-
-			var addMessageElement = function(el, options)
-			{
-				var $el = $(el);
-
-			    if (!options) {
-			      options = {};
-			    }
-			    if (typeof options.fade === 'undefined') {
-			      options.fade = true;
-			    }
-			    if (typeof options.prepend === 'undefined') {
-			      options.prepend = false;
-			    }
-
-			    // Apply options
-			    if (options.fade) {
-			      $el.hide().fadeIn(FADE_TIME);
-			    }
-			    if (options.prepend) {
-			      $messages.prepend($el);
-			    } else {
-			      $messages.append($el);
-			    }
-			    $messages[0].scrollTop = $messages[0].scrollHeight;
-			 };
-
-			 var cleanInput = function(input)
-			 {	
-			 	return $('<div/>').text(input).text();
-			 }
-
-			var updateTyping  = function()
-			{
-				if (connected) {
-			      if (!typing) {
-			        typing = true;
-			        socket.emit('typing', code);
-			      }
-			      lastTypingTime = (new Date()).getTime();
-
-			      setTimeout(function () {
-			        var typingTimer = (new Date()).getTime();
-			        var timeDiff = typingTimer - lastTypingTime;
-			        if (timeDiff >= TYPING_TIMER_LENGTH && typing) {
-			          socket.emit('stop typing', code);
-			          typing = false;
-			        }
-			      }, TYPING_TIMER_LENGTH);
-			    }
-			};
-
-			var getTypingMessages = function(data)
-			{
-    			return $('.typing.message').filter(function (i) {
-      				return $(this).data('username') === data.username;
-    			});
-  			};
-
-		   var getUsernameColor = function(username)
-		   {
-		    // Compute hash code
-		    var hash = 7;
-		    for (var i = 0; i < username.length; i++) {
-		       hash = username.charCodeAt(i) + (hash << 5) - hash;
-		    }
-		    // Calculate color
-		    var index = Math.abs(hash % COLORS.length);
-		    return COLORS[index];
-		  };
-
-			$window.keydown(function(event)
-			{
-			    // Auto-focus the current input when a key is typed
-			    if (!(event.ctrlKey || event.metaKey || event.altKey)) {
-			      $currentInput.focus();
-			    }
-			    // When the client hits ENTER on their keyboard
-			    if (event.which === 13) {
-			      if (username) {
-			        sendMessage();
-			        socket.emit('stop typing', code);
-			        typing = false;
-			      } else {
-			        setUsername();
-			      }
-			    }
-			});
-
-			$inputMessage.on('input', function()
-			{
-				updateTyping();
-			});
-
-			$loginPage.click(function ()
-			{
-				$currentInput.focus();
-			});
-
-		  // Focus input when clicking on the message input's border
-		  $inputMessage.click(function ()
-		  {
-				$inputMessage.focus();
-		  });
-
-		  socket.on('login', function (data) {
-		    connected = true;
-		    // Display the welcome message
-		    var message = "Welcome to Socket.IO Chat – ";
-		    log(message, {
-		      prepend: true
-		    });
-		    addParticipantsMessage(data);
-		  });
-
-		  // Whenever the server emits 'new message', update the chat body
-		  socket.on('new message', function (data) {
-		    addChatMessage(data);
-		  });
-
-		  // Whenever the server emits 'user joined', log it in the chat body
-		  socket.on('user joined', function (data) {
-		    log(data.username + ' joined');
-		    addParticipantsMessage(data);
-		  });
-
-		  // Whenever the server emits 'user left', log it in the chat body
-		  socket.on('user left', function (data) {
-		    log(data.username + ' left');
-		    addParticipantsMessage(data);
-		    removeChatTyping(data);
-		  });
-
-		  // Whenever the server emits 'typing', show the typing message
-		  socket.on('typing', function (data) {
-		    addChatTyping(data);
-		  });
-
-		  // Whenever the server emits 'stop typing', kill the typing message
-		  socket.on('stop typing', function (data) {
-		    removeChatTyping(data);
-		  });
-		</script>
-	</body>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="/js/Chart.min.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
+	<script type="text/javascript" src="/js/jquery.flexslider.js"></script><!-- Flexslider Js -->
+	<script type="text/javascript" src="/js/flexslider-settings.js"></script><!-- Flexslider Settings Js -->
+	<script type="text/javascript" src="/js/isotope.pkgd.js"></script><!-- Isotope packaged -->
+	<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
+	<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
+	<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="/js/client.js"></script>
+</body>
 </html>
