renamed some id and classes

--- a/public/results.html
+++ b/public/results.html
@@ -194,7 +194,7 @@
 		 	margin-top: 10px;
 		 }
 		 @media (max-width: 991px) {
-			 #pollTitle{
+			 #poll-title{
 				 font-size: 55px;
 			 }
 		}
@@ -202,11 +202,11 @@
 	</style>
 <body>
 
-	<h1 id="pollTitle"></h1>
+	<h1 id="poll-title"></h1>
 		<div class="pie-box container">
 				 	<div id="pollContainer" class="col-md-8">
 				 		<div class="col-md-3"></div>
-							<canvas id="poll-results" width="430" height="430"></canvas>
+							<canvas id="chart" width="430" height="430"></canvas>
 					</div>
 		</div>
 
